Lab GPU: 1a parte

--- a/reduc-operation-array.ipynb
+++ b/reduc-operation-array.ipynb
@@ -10,73 +10,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "496946fa-2a28-4c1d-8a6a-2ee0b8fd8ced",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken by reduction operation using a function: 2.62 ms ± 8.27 µs per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
-      "And the result of the sum of numbers in the range [0, value) is: 24995.051343753086\n",
-      "\n",
-      "Time taken by reduction operation using numpy.sum(): 7.88 µs ± 8.1 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n",
-      "Now, the result using numpy.sum(): 24995.051343752984 \n",
-      " \n",
-      "Time taken by reduction operation using numpy.ndarray.sum(): 7.14 µs ± 0.478 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n",
-      "Now, the result using numpy.ndarray.sum(): 24995.051343752984\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import argparse\n",
+    "import time\n",
     "\n",
+    "# Función original\n",
     "def reduc_operation(A):\n",
-    "    \"\"\"Compute the sum of the elements of Array A in the range [0, value).\"\"\"\n",
+    "    \"\"\"Compute the sum of the elements of Array A.\"\"\"\n",
     "    s = 0\n",
     "    for i in range(A.size):\n",
     "        s += A[i]\n",
     "    return s\n",
     "\n",
-    "# Secuencial\n",
+    "# Configuración de argparse para recibir argumentos\n",
+    "parser = argparse.ArgumentParser(description=\"Programa para calcular la suma de elementos de un array.\")\n",
+    "parser.add_argument(\"--value\", type=int, default=5*10**7, \n",
+    "                    help=\"Número de elementos del array (por defecto: 5*10^4)\")\n",
     "\n",
-    "value = 5*10**4\n",
+    "args = parser.parse_args()\n",
+    "value = args.value\n",
     "\n",
+    "# Crear el array con los valores aleatorios\n",
     "X = np.random.rand(value)\n",
     "\n",
-    "# Para imprimir los pimeros valores del array\n",
+    "print(f\"Array size: {value}\\n\")\n",
     "\n",
-    "# print(X[0:12])\n",
+    "# Medir tiempo con la función reduc_operation\n",
+    "start_time = time.time()\n",
+    "suma_reduc = reduc_operation(X)\n",
+    "end_time = time.time()\n",
+    "print(f\"Tiempo con función reduc_operation: {end_time - start_time:.6f} segundos, Suma: {suma_reduc}\")\n",
     "\n",
-    "# Utilizando las operaciones mágicas de ipython\n",
+    "# Medir tiempo con numpy.sum()\n",
+    "start_time = time.time()\n",
+    "suma_numpy = np.sum(X)\n",
+    "end_time = time.time()\n",
+    "print(f\"Tiempo con numpy.sum(): {end_time - start_time:.6f} segundos, Suma: {suma_numpy}\")\n",
     "\n",
-    "tiempo = %timeit -r 2 -o -q reduc_operation(X)\n",
-    "\n",
-    "print(\"Time taken by reduction operation using a function:\", tiempo)\n",
-    "\n",
-    "\n",
-    "print(f\"And the result of the sum of numbers in the range [0, value) is: {reduc_operation(X)}\\n\")\n",
-    "\n",
-    "\n",
-    "# Utilizando numpy.sum()\n",
-    "\n",
-    "tiempo = %timeit -r 2 -o -q np.sum(X)\n",
-    "\n",
-    "print(\"Time taken by reduction operation using numpy.sum():\", tiempo)\n",
-    "\n",
-    "print(\"Now, the result using numpy.sum():\", np.sum(X),\"\\n \")\n",
-    "\n",
-    "\n",
-    "# Utilizando numpy.ndarray.sum()\n",
-    "\n",
-    "tiempo= %timeit -r 2 -o -q X.sum()\n",
-    "\n",
-    "print(\"Time taken by reduction operation using numpy.ndarray.sum():\", tiempo)\n",
-    "\n",
-    "print(\"Now, the result using numpy.ndarray.sum():\", X.sum())\n",
-    "\n",
-    "\n"
+    "# Medir tiempo con ndarray.sum()\n",
+    "start_time = time.time()\n",
+    "suma_ndarray = X.sum()\n",
+    "end_time = time.time()\n",
+    "print(f\"Tiempo con numpy.ndarray.sum(): {end_time - start_time:.6f} segundos, Suma: {suma_ndarray}\")"
    ]
   }
  ],
